--- a/client/src/App.css
+++ b/client/src/App.css
@@ -18,7 +18,6 @@
 
   display: flex;
   justify-content: space-between;
-  /* background-color: blue; */
   padding: 1rem 0;
 }
 .employee-entry .record label {
@@ -27,17 +26,16 @@
   font-weight: 600;
 }
 
-.employee-entry input {
+input {
   width: 60%;
   font-size: 1rem;
-  /* background-color: aqua; */
 }
-.employee-entry button {
+button {
   width: 15rem;
   height: 3rem;
   margin: 1rem 0;
 }
-.employee-entry button:hover {
+button:hover {
   cursor: pointer;
 }
 
@@ -53,4 +51,20 @@
   justify-content: center;
   align-items: center;
   width: 100%;
+}
+.employee {
+  width: 50%;
+  border: 1px solid black;
+  margin: 1rem;
+  padding: 0.5rem 2rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.employee h2 {
+  padding: 0;
+}
+.employee h4 {
+  padding: 0;
 }
